create play, details, result quiz functionality. fix something in pages and logic